Minor fix for checkbox spacing #3
thanks @chi-wi

--- a/obsidian.css
+++ b/obsidian.css
@@ -219,6 +219,7 @@ ul ul ul ol > li:not(.task-list-item)::before {
     width: 1.25em;
     height: 1.25em;
     margin: 0;
+    margin-right: 0.5em;
     box-shadow: 0 0 0.5em var(--accent-2);
 }
 .markdown-preview-view .task-list-item-checkbox:checked::before {
